# ngPost

./: .gitignore  README.md
.github/workflows/: main.yml  release.yml
src/: ArticleBuilder.cpp  ArticleBuilder.h  CMakeLists.txt  FileUploader.cpp  FileUploader.h  FoldersMonitorForNewFiles.cpp  FoldersMonitorForNewFiles.h  NgPost.cpp  NgPost.h  NntpCheckCon.cpp  NntpCheckCon.h  NntpConnection.cpp  NntpConnection.h  NzbCheck.cpp  NzbCheck.h  Poster.cpp  Poster.h  PostingJob.cpp  PostingJob.h  main.cpp  ngPost.pri  ngPost.pro  ngPost_cmd.pro
src/hmi/: AboutNgPost.cpp  AboutNgPost.h  AboutNgPost.ui  AutoPostWidget.cpp  AutoPostWidget.h  AutoPostWidget.ui  CheckBoxCenterWidget.cpp  CheckBoxCenterWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PathSettingsWidget.cpp  PathSettingsWidget.h  PathSettingsWidget.ui  PostingWidget.cpp  PostingWidget.h  PostingWidget.ui  SettingsWidget.cpp  SettingsWidget.h  SettingsWidget.ui  SignedListWidget.cpp  SignedListWidget.h
src/lang/: ngPost_de.ts  ngPost_en.ts  ngPost_es.ts  ngPost_fr.ts  ngPost_nl.ts  ngPost_pt.ts  ngPost_zh.ts
src/nntp/: Nntp.cpp  Nntp.h  NntpArticle.cpp  NntpArticle.h  NntpFile.cpp  NntpFile.h  NntpServerParams.h
src/resources/: resources.qrc  version.rc
src/utils/: CmdOrGuiApp.cpp  CmdOrGuiApp.h  ConfigKeys.cpp  ConfigKeys.h  ConfigUtility.cpp  ConfigUtility.h  Macros.h  PureStaticClass.h  WindowsUtils.cpp  WindowsUtils.h  Yenc.cpp  Yenc.h
